[gd_scene load_steps=6 format=3 uid="uid://bgr8o1cxc3d6"]

[ext_resource type="Script" path="res://scripts/shop_item.gd" id="1_aklwn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dxdq"]
bg_color = Color(0, 0, 0, 0.478431)
border_width_top = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 0.898039)

[sub_resource type="Theme" id="Theme_s1eoq"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_4dxdq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfbdf"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 3
border_color = Color(0, 0, 0, 0.870588)

[sub_resource type="Theme" id="Theme_lht6w"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 5
Label/font_sizes/font_size = 24
PanelContainer/styles/panel = SubResource("StyleBoxFlat_sfbdf")

[node name="ShopItem" type="Node2D"]
script = ExtResource("1_aklwn")

[node name="Container" type="PanelContainer" parent="."]
offset_right = 450.0
offset_bottom = 168.0
theme = SubResource("Theme_s1eoq")

[node name="Layout" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="CardArea" type="MarginContainer" parent="Container/Layout"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2

[node name="NameArea" type="PanelContainer" parent="Container/Layout"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_lht6w")

[node name="Name" type="Label" parent="Container/Layout/NameArea"]
layout_mode = 2
text = "Seiya"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceArea" type="MarginContainer" parent="Container/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Price" type="Label" parent="Container/Layout/PriceArea"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="Container"]
clip_contents = true
layout_mode = 2
flat = true

[connection signal="pressed" from="Container/BuyButton" to="." method="_on_buy_button_pressed"]
